src/components/layout/NavigationBar.scss
nav {
	z-index: 10;
	left: 0;
	right: 0;
	top: 0;
	padding: 0 5%;
	height: 6.25rem;
    background-color: hsl(0, 0%, 4%);

	.logo {
		float: left;
		width: 40%;
		height: 100%;
		display: flex;
		align-items: center;
		font-size: 1.5rem;

		.img {
			margin-right: 1.25rem;
		}
	}

	.links {
		float: right;
		padding: 0;
		margin: 0;
		width: 40%;
		height: 100%;
		display: flex;
		justify-content: space-around;
		align-items: center;

		li {
			list-style: none;
		}
	}

	a {
		text-decoration: none;
		color: white;
	}

	.links a, button {
		display: block;
		padding: 1em;
		font-size: 1rem;
		font-weight: 400;
	}

	#nav-toggle {
		position: absolute;
		top: -6.25rem;
	}

	.icon-burger {
		display: none;
		position: absolute;
		right: 5%;
		top: 3.1rem;
		transform: translateY(-50%);

		.line {
			top:3.1rem;
			width: 1.875rem;
			height:0.3rem;
			background-color: white;
			margin:0.3rem;
			border-radius: 0.188rem;
			transition: all .3s ease-in-out;
		}
	}
}

#dash-button {
	background-color: transparent;
    outline: none;
    padding: 0.625rem 0.75rem !important;
    border: 0.1rem solid rgb(255, 165, 0);
    color: white;
    border-radius:0.3rem;
    transition: all 180ms ease-out 0s;
    cursor: pointer;
	min-width: 8.75rem;
}

#dash-button:hover {
    background-color: rgb(255, 165, 0);
    color: white;
}

.logged-button {
	display: flex;
	align-items: center;
	justify-content: center;
}

@media screen and (max-width: 768px) {
	nav {
		.logo {
			float: none;
			width: auto;
			padding-left: 0.625rem;
		}
		.links {
			float: none;
			position: fixed;
			z-index: 9;
			left: 0;
			right: 0;
			top: 6.25rem;
			bottom: 100%;
			width: auto;
			height: auto;
			flex-direction: column;
			justify-content: space-evenly;
			background-color: #18191c;
			overflow: hidden;
			box-sizing: border-box;
			transition: all .5s ease-in-out;
		}
		.links a,button {
			font-size: 1.25rem;
		}
		&:checked ~ .links {
			bottom: 15.6rem;
		}
		.icon-burger {
			display: block;
		}
		&:checked ~ .icon-burger .line:nth-child(1) {
			transform: translateY(0.625rem) rotate(225deg);
		}
		&:checked ~ .icon-burger .line:nth-child(3) {
			transform: translateY(-0.625rem) rotate(-225deg);
		}
		&:checked ~ .icon-burger .line:nth-child(2) {
			opacity: 0;
		}
	}
}

